--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,32 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.10.0'
 }
 
 repositories {
     mavenCentral()
 }
 
+allure {
+    report {
+        version.set("2.18.1")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.18.1")
+            }
+        }
+    }
+}
+
 dependencies {
     testImplementation(
-        "com.codeborne:selenide:6.6.3",
-        "org.junit.jupiter:junit-jupiter:5.8.2",
-        "org.slf4j:slf4j-simple:1.7.36"
+        'com.codeborne:selenide:6.6.3',
+        'org.junit.jupiter:junit-jupiter:5.8.2',
+        'io.qameta.allure:allure-selenide:2.18.1',
+        'org.slf4j:slf4j-simple:1.7.36'
     )
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
 }
